--- a/package.json
+++ b/package.json
@@ -2,69 +2,48 @@
   "name": "starter-kit",
   "version": "1.0.0",
   "license": "MIT",
-  "browserslist": ["last 2 versions", "IE 11"],
+  "browserslist": [
+    "last 2 versions",
+    "IE 11"
+  ],
   "scripts": {
     "start": "nf start",
-    "build:graphql:schema:json":
-      "apollo-codegen introspect-schema modules/graphql-api/schema.graphql --output modules/graphql-api/schema.json",
-    "build:graphql:schema:types":
-      "yarn build:graphql:schema:types:gen && yarn build:graphql:schema:types:fmt",
-    "build:graphql:schema:types:gen":
-      "gql-gen --file modules/graphql-api/schema.json  --template typescript --out modules/graphql-api/schema-types.ts modules/graphql-api/schema.graphql",
-    "build:graphql:schema:types:fmt":
-      "prettier --write 'modules/graphql-api/schema-types.ts'",
-    "build:graphql:client:types":
-      "yarn build:graphql:client:types:gen; yarn build:graphql:client:types:fmt; yarn build:graphql:client:types:fmt",
-    "build:graphql:client:types:gen":
-      "apollo-codegen generate 'modules/{client,usp-components}/**/*.graphql' --schema modules/graphql-api/schema.json --target typescript --output modules/client/graphql-types.ts",
-    "build:graphql:client:types:fmt":
-      "prettier --write 'modules/client/graphql-types.ts'",
-    "build:graphql:fmt":
-      "concurrently 'yarn build:graphql:schema:types:fmt' 'yarn build:graphql:client:types:fmt'",
-    "build:graphql":
-      "yarn build:graphql:schema:json && concurrently 'yarn build:graphql:schema:types' 'yarn build:graphql:client:types'",
+    "build:graphql:schema:json": "apollo-codegen introspect-schema modules/graphql-api/schema.graphql --output modules/graphql-api/schema.json",
+    "build:graphql:schema:types": "yarn build:graphql:schema:types:gen && yarn build:graphql:schema:types:fmt",
+    "build:graphql:schema:types:gen": "gql-gen --file modules/graphql-api/schema.json  --template typescript --out modules/graphql-api/schema-types.ts modules/graphql-api/schema.graphql",
+    "build:graphql:schema:types:fmt": "prettier --write 'modules/graphql-api/schema-types.ts'",
+    "build:graphql:client:types": "yarn build:graphql:client:types:gen; yarn build:graphql:client:types:fmt; yarn build:graphql:client:types:fmt",
+    "build:graphql:client:types:gen": "apollo-codegen generate 'modules/{client,usp-components}/**/*.graphql' --schema modules/graphql-api/schema.json --target typescript --output modules/client/graphql-types.ts",
+    "build:graphql:client:types:fmt": "prettier --write 'modules/client/graphql-types.ts'",
+    "build:graphql:fmt": "concurrently 'yarn build:graphql:schema:types:fmt' 'yarn build:graphql:client:types:fmt'",
+    "build:graphql": "yarn build:graphql:schema:json && concurrently 'yarn build:graphql:schema:types' 'yarn build:graphql:client:types'",
     "build:client": "webpack --config ./webpack/client.config.js",
     "build:server": "webpack --config ./webpack/server.config.js",
-    "build":
-      "yarn build:graphql && concurrently -p index 'yarn build:client' 'yarn build:server'",
-    "build:production":
-      "cross-env NODE_ENV=production \"concurrently 'yarn build:client' 'yarn build:server'\"",
-    "dev":
-      "concurrently -p name -c \"yellow,magenta,green,blue,gray\" -n \"webpack-server,nodemon-server,webpack-client,graphql-types\" \"yarn dev:server:webpack\" \"yarn dev:server:nodemon\" \"yarn dev:client\" \"yarn dev:graphql\"",
-    "dev:server":
-      "concurrently -n 'webpack-server,nodemon-server' 'yarn dev:server:webpack' 'yarn dev:server:nodemon'",
+    "build": "yarn build:graphql && concurrently -p index 'yarn build:client' 'yarn build:server'",
+    "build:production": "cross-env NODE_ENV=production \"concurrently 'yarn build:client' 'yarn build:server'\"",
+    "dev": "concurrently -p name -c \"yellow,magenta,green,blue,gray\" -n \"webpack-server,nodemon-server,webpack-client,graphql-types\" \"yarn dev:server:webpack\" \"yarn dev:server:nodemon\" \"yarn dev:client\" \"yarn dev:graphql\"",
+    "dev:server": "concurrently -n 'webpack-server,nodemon-server' 'yarn dev:server:webpack' 'yarn dev:server:nodemon'",
     "dev:server:webpack": "webpack --config webpack/server.config.js --watch",
-    "dev:server:nodemon":
-      "nodemon --watch dist/server.js -- --inspect=9229 dist/server.js",
-    "dev:client":
-      "node -e 'require(\"./webpack/webpack-dev-server\").startDevServer()'",
-    "dev:graphql":
-      "sleep 8 && nodemon -e graphql,gql -w modules/ -x 'yarn build:graphql'",
+    "dev:server:nodemon": "nodemon --watch dist/server.js -- --inspect=9229 dist/server.js",
+    "dev:client": "node -e 'require(\"./webpack/webpack-dev-server\").startDevServer()'",
+    "dev:graphql": "sleep 8 && nodemon -e graphql,gql -w modules/ -x 'yarn build:graphql'",
     "dev:storybook": "start-storybook -p 9001 -c .storybook",
-    "lint":
-      "tslint -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
-    "lint:fix":
-      "tslint --fix -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
-    "fmt:prettier":
-      "prettier --write 'modules/**/*.{ts,tsx,js,jsx}' package.json",
+    "lint": "tslint -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
+    "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
+    "fmt:prettier": "prettier --write 'modules/**/*.{ts,tsx,js,jsx}' package.json",
     "fmt": "yarn fmt:prettier; yarn lint:fix",
     "pretest": "yarn lint",
     "test": "yarn test:unit && yarn test:acceptance",
     "test:unit": "jest -w1",
     "test:unit:debug": "node --debug-brk ./node_modules/.bin/jest --runInBand",
-    "test:acceptance":
-      "if [ $BUILD ]; then yarn test:acceptance:build; fi; concurrently --kill-others -s first 'yarn test:acceptance:server' 'yarn test:acceptance:run'",
-    "test:acceptance:build-and-run":
-      "yarn test:acceptance:build && yarn test:acceptance",
+    "test:acceptance": "if [ $BUILD ]; then yarn test:acceptance:build; fi; concurrently --kill-others -s first 'yarn test:acceptance:server' 'yarn test:acceptance:run'",
+    "test:acceptance:build-and-run": "yarn test:acceptance:build && yarn test:acceptance",
     "test:acceptance:build": "cross-env NODE_ENV=test yarn build",
-    "test:acceptance:server":
-      "NODE_ENV=test node dist/server.js > tests/acceptance/last-run.log",
-    "test:acceptance:run":
-      "while ! nc -z localhost 3002; do sleep 0.1; done; cross-env NODE_ENV=test jest -w1 -c ./acceptance.jestrc.json",
+    "test:acceptance:server": "NODE_ENV=test node dist/server.js > tests/acceptance/last-run.log",
+    "test:acceptance:run": "while ! nc -z localhost 3002; do sleep 0.1; done; cross-env NODE_ENV=test jest -w1 -c ./acceptance.jestrc.json",
     "db:up": "exec docker-compose up",
     "db:create": "yarn db:create:dev; yarn db:create:test",
-    "db:create:dev":
-      "docker-compose run  postgres createdb -h postgres development",
+    "db:create:dev": "docker-compose run  postgres createdb -h postgres development",
     "db:create:test": "docker-compose run  postgres createdb -h postgres test",
     "db:run": "docker-compose run  postgres psql -h postgres",
     "db:migrate:make": "knex migrate:make",
@@ -84,12 +63,21 @@
       "<rootDir>/node_modules/(?!lodash-es|react-apollo)"
     ],
     "testRegex": "/modules/.*/__tests__/.*\\.(test|spec)\\.(ts|tsx)$",
-    "moduleFileExtensions": ["js", "jsx", "ts", "tsx", "json"],
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "ts",
+      "tsx",
+      "json"
+    ],
     "moduleNameMapper": {
       "\\.(css|less|scss)$": "identity-obj-proxy",
       "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
     },
-    "moduleDirectories": ["modules", "node_modules"]
+    "moduleDirectories": [
+      "modules",
+      "node_modules"
+    ]
   },
   "dependencies": {
     "@atomic-object/lenses": "^0.1.0",
@@ -143,6 +131,7 @@
     "knex": "^0.13.0",
     "knex-logger": "^0.1.0",
     "lodash-es": "^4.17.4",
+    "moment": "^2.20.1",
     "morgan": "^1.8.1",
     "node-sass": "^4.5.2",
     "pg": "^7.0.2",
