--- a/package.json
+++ b/package.json
@@ -2,110 +2,160 @@
   "name": "starter-kit",
   "version": "1.0.0",
   "license": "MIT",
-  "browserslist": [
-    "last 2 versions",
-    "IE 11"
-  ],
+  "browserslist": ["last 2 versions", "IE 11"],
   "scripts": {
-    "start": "nf start",
-    "build:graphql:schema:json": "apollo-codegen introspect-schema modules/graphql-api/schema.graphql --output modules/graphql-api/schema.json",
-    "build:graphql:schema:types": "yarn build:graphql:schema:types:gen && yarn build:graphql:schema:types:fmt",
-    "build:graphql:schema:types:gen": "gql-gen --file modules/graphql-api/schema.json  --template typescript --out modules/graphql-api/schema-types.ts modules/graphql-api/schema.graphql",
-    "build:graphql:schema:types:fmt": "prettier --write 'modules/graphql-api/schema-types.ts'",
-    "build:graphql:client:types": "yarn build:graphql:client:types:gen; yarn build:graphql:client:types:fmt; yarn build:graphql:client:types:fmt",
-    "build:graphql:client:types:gen": "apollo-codegen generate 'modules/{client,usp-components}/**/*.graphql' --schema modules/graphql-api/schema.json --target typescript --output modules/client/graphql-types.ts",
-    "build:graphql:client:types:fmt": "prettier --write 'modules/client/graphql-types.ts'",
-    "build:graphql:fmt": "concurrently 'yarn build:graphql:schema:types:fmt' 'yarn build:graphql:client:types:fmt'",
-    "build:graphql": "yarn build:graphql:schema:json && concurrently 'yarn build:graphql:schema:types' 'yarn build:graphql:client:types'",
+    "build:graphql:schema:json":
+      "apollo-codegen introspect-schema modules/graphql-api/schema.graphql --output modules/graphql-api/schema.json",
+    "build:graphql:schema:types":
+      "yarn build:graphql:schema:types:gen && yarn build:graphql:schema:types:fmt",
+    "build:graphql:schema:types:gen":
+      "gql-gen --file modules/graphql-api/schema.json  --template typescript --out modules/graphql-api/schema-types.ts modules/graphql-api/schema.graphql",
+    "build:graphql:schema:types:fmt":
+      "prettier --write 'modules/graphql-api/schema-types.ts'",
+    "build:graphql:client:types":
+      "yarn build:graphql:client:types:gen; yarn build:graphql:client:types:fmt; yarn build:graphql:client:types:fmt",
+    "build:graphql:client:types:gen":
+      "apollo-codegen generate 'modules/client/**/*.graphql' --schema modules/graphql-api/schema.json --target typescript --output modules/client/graphql-types.ts",
+    "build:graphql:client:types:fmt":
+      "prettier --write 'modules/client/graphql-types.ts'",
+    "build:graphql:fmt":
+      "concurrently 'yarn build:graphql:schema:types:fmt' 'yarn build:graphql:client:types:fmt'",
+    "build:graphql":
+      "yarn build:graphql:schema:json && concurrently 'yarn build:graphql:schema:types' 'yarn build:graphql:client:types'",
+    "build:jsonschema:types":
+      "json2ts modules/core/csv/input-flight.schema.json modules/core/csv/input-flight-schema.ts && json2ts modules/core/xlsx/cpt-main.schema.json modules/core/xlsx/cpt-main-schema.ts && json2ts modules/core/xlsx/cpt-trans.schema.json modules/core/xlsx/cpt-trans-schema.ts",
     "build:client": "webpack --config ./webpack/client.config.js",
     "build:server": "webpack --config ./webpack/server.config.js",
-    "build": "yarn build:graphql && concurrently -p index 'yarn build:client' 'yarn build:server'",
-    "build:production": "cross-env NODE_ENV=production \"concurrently 'yarn build:client' 'yarn build:server'\"",
-    "dev": "concurrently -p name -c \"yellow,magenta,green,blue,gray\" -n \"webpack-server,nodemon-server,webpack-client,graphql-types\" \"yarn dev:server:webpack\" \"yarn dev:server:nodemon\" \"yarn dev:client\" \"yarn dev:graphql\"",
-    "dev:server": "concurrently -n 'webpack-server,nodemon-server' 'yarn dev:server:webpack' 'yarn dev:server:nodemon'",
-    "dev:server:webpack": "webpack --config webpack/server.config.js --watch",
-    "dev:server:nodemon": "nodemon --watch dist/server.js -- --inspect=9229 dist/server.js",
-    "dev:client": "node -e 'require(\"./webpack/webpack-dev-server\").startDevServer()'",
-    "dev:graphql": "sleep 8 && nodemon -e graphql,gql -w modules/ -x 'yarn build:graphql'",
-    "dev:storybook": "start-storybook -p 9001 -c .storybook",
-    "lint": "tslint -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
-    "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
-    "fmt:prettier": "prettier --write 'modules/**/*.{ts,tsx,js,jsx}' package.json",
-    "fmt": "yarn fmt:prettier; yarn lint:fix",
-    "pretest": "yarn lint",
-    "test": "yarn test:unit && yarn test:acceptance",
-    "test:unit": "jest -w1",
-    "test:unit:debug": "node --debug-brk ./node_modules/.bin/jest --runInBand",
-    "test:acceptance": "if [ $BUILD ]; then yarn test:acceptance:build; fi; concurrently --kill-others -s first 'yarn test:acceptance:server' 'yarn test:acceptance:run'",
-    "test:acceptance:build-and-run": "yarn test:acceptance:build && yarn test:acceptance",
-    "test:acceptance:build": "cross-env NODE_ENV=test yarn build",
-    "test:acceptance:server": "NODE_ENV=test node dist/server.js > tests/acceptance/last-run.log",
-    "test:acceptance:run": "while ! nc -z localhost 3002; do sleep 0.1; done; cross-env NODE_ENV=test jest -w1 -c ./acceptance.jestrc.json",
-    "db:up": "exec docker-compose up",
+    "build":
+      "yarn build:graphql && concurrently -p index 'yarn build:client' 'yarn build:server'",
+    "build:production":
+      "cross-env NODE_ENV=production \"concurrently 'yarn build:client' 'yarn build:server'\"",
+    "db:up": "cd docker; exec docker-compose up",
     "db:create": "yarn db:create:dev; yarn db:create:test",
-    "db:create:dev": "docker-compose run  postgres createdb -h postgres development",
-    "db:create:test": "docker-compose run  postgres createdb -h postgres test",
-    "db:run": "docker-compose run  postgres psql -h postgres",
+    "db:create:dev":
+      "cd docker; docker-compose exec  postgres createdb -h postgres pcs-development",
+    "db:create:test":
+      "cd docker; docker-compose exec  postgres createdb -h postgres pcs-test",
+    "db:run": "cd docker; docker-compose exec  postgres psql -h postgres",
     "db:migrate:make": "knex migrate:make",
     "db:migrate:latest": "knex migrate:latest",
     "db:migrate:rollback": "knex migrate:rollback",
     "db:seed:make": "knex seed:make",
     "db:seed:run": "knex seed:run",
+    "db:drop": "yarn db:drop:dev; yarn db:drop:test",
+    "db:drop:dev":
+      "cd docker; docker-compose exec postgres dropdb -h postgres pcs-development",
+    "db:drop:test":
+      "cd docker; docker-compose exec postgres dropdb -h postgres pcs-test",
+    "dev":
+      "concurrently -p name -c \"yellow,magenta,green,blue,gray\" -n \"webpack-server,nodemon-server,webpack-client,graphql-types\" \"yarn dev:server:webpack\" \"yarn dev:server:nodemon\" \"yarn dev:client\" \"yarn dev:graphql\"",
+    "dev:server":
+      "concurrently -n 'webpack-server,nodemon-server' 'yarn dev:server:webpack' 'yarn dev:server:nodemon'",
+    "dev:server:webpack": "webpack --config webpack/server.config.js --watch",
+    "dev:server:nodemon":
+      "nodemon --inspect=9229 --watch dist/server.js dist/server.js",
+    "dev:client":
+      "node -e 'require(\"./webpack/webpack-dev-server\").startDevServer()'",
+    "dev:graphql":
+      "sleep 8 && nodemon -e graphql,gql -w modules/ -x 'yarn build:graphql'",
+    "dev:storybook": "start-storybook -p 9001 -c .storybook",
+    "lint":
+      "tslint  -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
+    "lint:fix":
+      "tslint --fix  -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
+    "fmt:prettier": "prettier --write 'modules/**/*.{ts,tsx,js,jsx}'",
+    "fmt": "yarn fmt:prettier; yarn lint:fix",
+    "postinstall": "yarn build",
+    "pretest": "yarn lint",
+    "start": "nf start",
+    "test": "yarn test:unit && yarn test:acceptance",
+    "test:reset-database": "NODE_ENV=test node dist/scripts/reset-database.js",
+    "test:unit": "yarn test:reset-database && NODE_ENV=test jest --forceExit",
+    "test:unit:debug": "node --debug-brk ./node_modules/.bin/jest --runInBand",
+    "test:acceptance":
+      "concurrently --kill-others -s first 'yarn test:acceptance:server' 'yarn test:acceptance:run'",
+    "test:acceptance:build": "cross-env NODE_ENV=test yarn build",
+    "test:acceptance:server":
+      "if [ $BUILD ]; then yarn test:acceptance:build; fi; cross-env NODE_ENV=test node dist/server.js > tests/acceptance/last-run.log",
+    "test:acceptance:run":
+      "while ! nc -z localhost 3002; do sleep 0.1; done; cross-env NODE_ENV=test jest -i -c ./acceptance.jestrc.json --forceExit",
     "validate": "npm ls"
   },
-  "pre-commit": [],
   "jest": {
     "transform": {
       "\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js",
       "\\.(gql|graphql)$": "jest-transform-graphql"
     },
-    "transformIgnorePatterns": [
-      "<rootDir>/node_modules/(?!lodash-es|react-apollo)"
-    ],
+    "transformIgnorePatterns": ["<rootDir>/node_modules/(?!lodash-es)"],
     "testRegex": "/modules/.*/__tests__/.*\\.(test|spec)\\.(ts|tsx)$",
-    "moduleFileExtensions": [
-      "js",
-      "jsx",
-      "ts",
-      "tsx",
-      "json"
-    ],
+    "moduleFileExtensions": ["js", "jsx", "ts", "tsx", "json"],
     "moduleNameMapper": {
       "\\.(css|less|scss)$": "identity-obj-proxy",
       "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
     },
-    "moduleDirectories": [
-      "modules",
-      "node_modules"
-    ]
+    "moduleDirectories": ["modules", "node_modules"],
+    "globals": {
+      "COMPILE_TIME_CONSTANTS": {
+        "TEST_LAB_ENABLED": "true"
+      }
+    }
+  },
+  "resolutions": {
+    "types/react": "16.0.0"
   },
   "dependencies": {
     "@atomic-object/lenses": "^0.1.0",
+    "@storybook/addon-actions": "^3.2.0",
+    "@storybook/addon-info": "^3.2.0",
+    "@storybook/addon-knobs": "^3.2.0",
+    "@storybook/addon-notes": "^3.2.0",
     "@storybook/addon-storyshots": "^3.2.8",
+    "@storybook/react": "^3.2.3",
+    "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.16.4",
     "@types/compression": "^0.0.34",
     "@types/config": "^0.0.32",
     "@types/cors": "^2.8.1",
     "@types/dotenv": "^4.0.0",
+    "@types/enzyme": "^2.8.4",
     "@types/express": "^4.0.35",
+    "@types/graphql": "0.10.2",
+    "@types/jest": "^20.0.6",
     "@types/knex": "^0.0.61",
+    "@types/left-pad": "^1.2.0",
     "@types/lodash-es": "^4.14.5",
+    "@types/moment-timezone": "^0.5.4",
     "@types/morgan": "^1.7.32",
+    "@types/multer": "^1.3.6",
+    "@types/mz": "^0.0.32",
+    "@types/newrelic": "^2.7.0",
     "@types/node": "^8.0.19",
     "@types/react": "^16.0.0",
+    "@types/react-datepicker": "^0.55.1",
     "@types/react-dom": "^15.5.2",
+    "@types/react-dropzone": "^4.2.0",
+    "@types/react-helmet": "^5.0.3",
+    "@types/react-modal": "^3.1.0",
     "@types/react-redux": "^5.0.6",
     "@types/react-router": "^4.0.14",
     "@types/react-router-dom": "^4.0.7",
     "@types/react-router-redux": "^5.0.4",
-    "@types/redux": "^3.6.0",
+    "@types/storybook__addon-actions": "^3.0.1",
+    "@types/storybook__addon-knobs": "^3.0.1",
+    "@types/storybook__addon-notes": "^3.0.1",
+    "@types/storybook__react": "^3.0.3",
     "@types/throng": "^4.0.0",
+    "@types/xlsx": "^0.0.36",
+    "ajv": "^5.5.1",
     "apollo-client": "^1.9.0",
-    "apollo-codegen": "^0.17",
+    "apollo-codegen": "^0.18.1",
     "apollo-local-query": "^0.3.0",
+    "apollo-test-utils": "^0.3.2",
     "autoprefixer": "^7.1.2",
     "awesome-typescript-loader": "^3.2.2",
+    "axios": "^0.17.1",
     "body-parser": "^1.17.1",
+    "casual": "^1.5.19",
     "compression": "^1.7.0",
     "compression-webpack-plugin": "^1.0.0",
     "concurrently": "^3.5.0",
@@ -114,77 +164,91 @@
     "cross-env": "^5.0.3",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
+    "csvtojson": "^1.1.9",
     "dataloader": "^1.3.0",
     "dotenv": "^4.0.0",
+    "enzyme": "^2.9.1",
     "express": "^4.15.2",
+    "express-basic-auth": "^1.1.4",
     "express-sslify": "^1.2.0",
     "express-static-gzip": "^0.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "factory.ts": "^0.2.2",
     "file-loader": "^0.11.1",
     "foreman": "^2.0.0",
+    "fs": "^0.0.1-security",
     "graphql": "^0.10.3",
     "graphql-code-generator": "0.5.5",
     "graphql-server-express": "^1.0.5",
+    "graphql-subscriptions": "^0.5.4",
     "graphql-tools": "^1.1.0",
     "html-webpack-plugin": "^2.30.1",
+    "identity-obj-proxy": "^3.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "jest": "^20.0.0",
+    "jest-environment-node-debug": "^2.0.0",
+    "jest-transform-graphql": "^2.0.0",
+    "js-xlsx": "^0.8.22",
+    "json-schema-to-typescript": "^5.1.0",
     "jsverify": "^0.8.2",
     "knex": "^0.13.0",
     "knex-logger": "^0.1.0",
+    "left-pad": "^1.2.0",
     "lodash-es": "^4.17.4",
-    "moment": "^2.20.1",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.14",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
+    "mz": "^2.7.0",
+    "newrelic": "^2.7.1",
+    "nightmare": "^2.10.0",
+    "nightmare-upload": "^0.1.1",
     "node-sass": "^4.5.2",
+    "nodemon": "^1.11.0",
     "pg": "^7.0.2",
     "postcss-loader": "^2.0.3",
     "postcss-modules-local-by-default": "^1.1.1",
     "precommit-hook": "^3.0.0",
+    "prettier": "^1.5.3",
     "progress-bar-webpack-plugin": "^1.10.0",
+    "qrcode.react": "^0.7.2",
     "react": "^15",
-    "react-apollo": "^1.4.10",
+    "react-apollo": "^1.4.16",
+    "react-datepicker": "^0.61.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^15",
+    "react-dropzone": "^4.2.3",
+    "react-helmet": "^5.2.0",
+    "react-modal": "^3.1.7",
     "react-redux": "^5.0.3",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
+    "react-test-renderer": "^15.6.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6",
+    "rollbar": "^2.3.8",
     "sass-loader": "^6.0.3",
+    "sequelize": "^4.13.5",
     "source-map-loader": "^0.2.1",
     "source-map-support": "^0.4.15",
     "style-loader": "^0.18.2",
+    "subscriptions-transport-ws": "^0.7.3",
     "throng": "^4.0.0",
+    "ts-jest": "^20.0.7",
     "ts-node": "^3.3.0",
     "tslint": "^5.5.0",
     "tslint-eslint-rules": "^4.0.0",
-    "typescript": "^2.4.2",
+    "typescript": "^2.7.0-rc",
     "url-loader": "^0.5.8",
     "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1",
     "webpack-node-externals": "^1.5.4",
-    "webpack-split-by-path": "^2.0.0"
+    "webpack-split-by-path": "^2.0.0",
+    "xlsx": "^0.11.16"
   },
+  "pre-commit": ["fmt:prettier", "lint:fix"],
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.0",
-    "@storybook/addon-info": "^3.2.0",
-    "@storybook/addon-knobs": "^3.2.0",
-    "@storybook/addon-notes": "^3.2.0",
-    "@storybook/react": "^3.2.3",
-    "@types/enzyme": "^2.8.4",
-    "@types/jest": "^20.0.6",
-    "@types/storybook__addon-actions": "^3.0.1",
-    "@types/storybook__addon-knobs": "^3.0.1",
-    "@types/storybook__addon-notes": "^3.0.1",
-    "@types/storybook__react": "^3.0.3",
-    "apollo-test-utils": "^0.3.2",
-    "enzyme": "^2.9.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^20.0.0",
-    "jest-environment-node-debug": "^2.0.0",
-    "jest-transform-graphql": "^2.0.0",
-    "nightmare": "^2.10.0",
-    "nodemon": "^1.11.0",
-    "prettier": "^1.5.3",
-    "react-test-renderer": "^15.6.1",
-    "ts-jest": "^20.0.7",
-    "webpack-dev-server": "^2.6.1"
+    "@playlyfe/gql": "^2.3.2"
   }
 }
