--- a/package.json
+++ b/package.json
@@ -2,40 +2,29 @@
   "name": "starter-kit",
   "version": "1.0.0",
   "license": "MIT",
-  "browserslist": ["last 2 versions", "IE 11"],
+  "browserslist": [
+    "last 2 versions",
+    "IE 11"
+  ],
   "scripts": {
-    "build:graphql:schema:json":
-      "apollo-codegen introspect-schema modules/graphql-api/schema.graphql --output modules/graphql-api/schema.json",
-    "build:graphql:schema:types":
-      "yarn build:graphql:schema:types:gen && yarn build:graphql:schema:types:fmt",
-    "build:graphql:schema:types:gen":
-      "gql-gen --file modules/graphql-api/schema.json  --template typescript --out modules/graphql-api/schema-types.ts modules/graphql-api/schema.graphql",
-    "build:graphql:schema:types:fmt":
-      "prettier --write 'modules/graphql-api/schema-types.ts'",
-    "build:graphql:client:types":
-      "yarn build:graphql:client:types:gen; yarn build:graphql:client:types:fmt; yarn build:graphql:client:types:fmt",
-    "build:graphql:client:types:gen":
-      "apollo-codegen generate 'modules/client/**/*.graphql' --schema modules/graphql-api/schema.json --target typescript --output modules/client/graphql-types.ts",
-    "build:graphql:client:types:fmt":
-      "prettier --write 'modules/client/graphql-types.ts'",
-    "build:graphql:fmt":
-      "concurrently 'yarn build:graphql:schema:types:fmt' 'yarn build:graphql:client:types:fmt'",
-    "build:graphql":
-      "yarn build:graphql:schema:json && concurrently 'yarn build:graphql:schema:types' 'yarn build:graphql:client:types'",
-    "build:jsonschema:types":
-      "json2ts modules/core/csv/input-flight.schema.json modules/core/csv/input-flight-schema.ts && json2ts modules/core/xlsx/cpt-main.schema.json modules/core/xlsx/cpt-main-schema.ts && json2ts modules/core/xlsx/cpt-trans.schema.json modules/core/xlsx/cpt-trans-schema.ts",
+    "build:graphql:schema:json": "apollo-codegen introspect-schema modules/graphql-api/schema.graphql --output modules/graphql-api/schema.json",
+    "build:graphql:schema:types": "yarn build:graphql:schema:types:gen && yarn build:graphql:schema:types:fmt",
+    "build:graphql:schema:types:gen": "gql-gen --file modules/graphql-api/schema.json  --template typescript --out modules/graphql-api/schema-types.ts modules/graphql-api/schema.graphql",
+    "build:graphql:schema:types:fmt": "prettier --write 'modules/graphql-api/schema-types.ts'",
+    "build:graphql:client:types": "yarn build:graphql:client:types:gen; yarn build:graphql:client:types:fmt; yarn build:graphql:client:types:fmt",
+    "build:graphql:client:types:gen": "apollo-codegen generate 'modules/client/**/*.graphql' --schema modules/graphql-api/schema.json --target typescript --output modules/client/graphql-types.ts",
+    "build:graphql:client:types:fmt": "prettier --write 'modules/client/graphql-types.ts'",
+    "build:graphql:fmt": "concurrently 'yarn build:graphql:schema:types:fmt' 'yarn build:graphql:client:types:fmt'",
+    "build:graphql": "yarn build:graphql:schema:json && concurrently 'yarn build:graphql:schema:types' 'yarn build:graphql:client:types'",
+    "build:jsonschema:types": "json2ts modules/core/csv/input-flight.schema.json modules/core/csv/input-flight-schema.ts && json2ts modules/core/xlsx/cpt-main.schema.json modules/core/xlsx/cpt-main-schema.ts && json2ts modules/core/xlsx/cpt-trans.schema.json modules/core/xlsx/cpt-trans-schema.ts",
     "build:client": "webpack --config ./webpack/client.config.js",
     "build:server": "webpack --config ./webpack/server.config.js",
-    "build":
-      "yarn build:graphql && concurrently -p index 'yarn build:client' 'yarn build:server'",
-    "build:production":
-      "cross-env NODE_ENV=production \"concurrently 'yarn build:client' 'yarn build:server'\"",
+    "build": "yarn build:graphql && concurrently -p index 'yarn build:client' 'yarn build:server'",
+    "build:production": "cross-env NODE_ENV=production \"concurrently 'yarn build:client' 'yarn build:server'\"",
     "db:up": "cd docker; exec docker-compose up",
     "db:create": "yarn db:create:dev; yarn db:create:test",
-    "db:create:dev":
-      "cd docker; docker-compose exec  postgres createdb -h postgres pcs-development",
-    "db:create:test":
-      "cd docker; docker-compose exec  postgres createdb -h postgres pcs-test",
+    "db:create:dev": "cd docker; docker-compose exec  postgres createdb -h postgres development",
+    "db:create:test": "cd docker; docker-compose exec  postgres createdb -h postgres test",
     "db:run": "cd docker; docker-compose exec  postgres psql -h postgres",
     "db:migrate:make": "knex migrate:make",
     "db:migrate:latest": "knex migrate:latest",
@@ -43,26 +32,17 @@
     "db:seed:make": "knex seed:make",
     "db:seed:run": "knex seed:run",
     "db:drop": "yarn db:drop:dev; yarn db:drop:test",
-    "db:drop:dev":
-      "cd docker; docker-compose exec postgres dropdb -h postgres pcs-development",
-    "db:drop:test":
-      "cd docker; docker-compose exec postgres dropdb -h postgres pcs-test",
-    "dev":
-      "concurrently -p name -c \"yellow,magenta,green,blue,gray\" -n \"webpack-server,nodemon-server,webpack-client,graphql-types\" \"yarn dev:server:webpack\" \"yarn dev:server:nodemon\" \"yarn dev:client\" \"yarn dev:graphql\"",
-    "dev:server":
-      "concurrently -n 'webpack-server,nodemon-server' 'yarn dev:server:webpack' 'yarn dev:server:nodemon'",
+    "db:drop:dev": "cd docker; docker-compose exec postgres dropdb -h postgres pcs-development",
+    "db:drop:test": "cd docker; docker-compose exec postgres dropdb -h postgres pcs-test",
+    "dev": "concurrently -p name -c \"yellow,magenta,green,blue,gray\" -n \"webpack-server,nodemon-server,webpack-client,graphql-types\" \"yarn dev:server:webpack\" \"yarn dev:server:nodemon\" \"yarn dev:client\" \"yarn dev:graphql\"",
+    "dev:server": "concurrently -n 'webpack-server,nodemon-server' 'yarn dev:server:webpack' 'yarn dev:server:nodemon'",
     "dev:server:webpack": "webpack --config webpack/server.config.js --watch",
-    "dev:server:nodemon":
-      "nodemon --inspect=9229 --watch dist/server.js dist/server.js",
-    "dev:client":
-      "node -e 'require(\"./webpack/webpack-dev-server\").startDevServer()'",
-    "dev:graphql":
-      "sleep 8 && nodemon -e graphql,gql -w modules/ -x 'yarn build:graphql'",
+    "dev:server:nodemon": "nodemon --inspect=9229 --watch dist/server.js dist/server.js",
+    "dev:client": "node -e 'require(\"./webpack/webpack-dev-server\").startDevServer()'",
+    "dev:graphql": "sleep 8 && nodemon -e graphql,gql -w modules/ -x 'yarn build:graphql'",
     "dev:storybook": "start-storybook -p 9001 -c .storybook",
-    "lint":
-      "tslint  -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
-    "lint:fix":
-      "tslint --fix  -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
+    "lint": "tslint  -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
+    "lint:fix": "tslint --fix  -c ./tslint.json -p ./tsconfig.json './modules/**/*.{ts,tsx}'",
     "fmt:prettier": "prettier --write 'modules/**/*.{ts,tsx,js,jsx}'",
     "fmt": "yarn fmt:prettier; yarn lint:fix",
     "postinstall": "yarn build",
@@ -72,13 +52,10 @@
     "test:reset-database": "NODE_ENV=test node dist/scripts/reset-database.js",
     "test:unit": "yarn test:reset-database && NODE_ENV=test jest --forceExit",
     "test:unit:debug": "node --debug-brk ./node_modules/.bin/jest --runInBand",
-    "test:acceptance":
-      "concurrently --kill-others -s first 'yarn test:acceptance:server' 'yarn test:acceptance:run'",
+    "test:acceptance": "concurrently --kill-others -s first 'yarn test:acceptance:server' 'yarn test:acceptance:run'",
     "test:acceptance:build": "cross-env NODE_ENV=test yarn build",
-    "test:acceptance:server":
-      "if [ $BUILD ]; then yarn test:acceptance:build; fi; cross-env NODE_ENV=test node dist/server.js > tests/acceptance/last-run.log",
-    "test:acceptance:run":
-      "while ! nc -z localhost 3002; do sleep 0.1; done; cross-env NODE_ENV=test jest -i -c ./acceptance.jestrc.json --forceExit",
+    "test:acceptance:server": "if [ $BUILD ]; then yarn test:acceptance:build; fi; cross-env NODE_ENV=test node dist/server.js > tests/acceptance/last-run.log",
+    "test:acceptance:run": "while ! nc -z localhost 3002; do sleep 0.1; done; cross-env NODE_ENV=test jest -i -c ./acceptance.jestrc.json --forceExit",
     "validate": "npm ls"
   },
   "jest": {
@@ -86,14 +63,25 @@
       "\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js",
       "\\.(gql|graphql)$": "jest-transform-graphql"
     },
-    "transformIgnorePatterns": ["<rootDir>/node_modules/(?!lodash-es)"],
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!lodash-es)"
+    ],
     "testRegex": "/modules/.*/__tests__/.*\\.(test|spec)\\.(ts|tsx)$",
-    "moduleFileExtensions": ["js", "jsx", "ts", "tsx", "json"],
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "ts",
+      "tsx",
+      "json"
+    ],
     "moduleNameMapper": {
       "\\.(css|less|scss)$": "identity-obj-proxy",
       "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
     },
-    "moduleDirectories": ["modules", "node_modules"],
+    "moduleDirectories": [
+      "modules",
+      "node_modules"
+    ],
     "globals": {
       "COMPILE_TIME_CONSTANTS": {
         "TEST_LAB_ENABLED": "true"
@@ -111,7 +99,9 @@
     "@storybook/addon-notes": "^3.2.0",
     "@storybook/addon-storyshots": "^3.2.8",
     "@storybook/react": "^3.2.3",
+    "@types/auth0-js": "^8.11.2",
     "@types/axios": "^0.14.0",
+    "@types/bcryptjs": "^2.4.1",
     "@types/body-parser": "^1.16.4",
     "@types/compression": "^0.0.34",
     "@types/config": "^0.0.32",
@@ -151,9 +141,12 @@
     "apollo-codegen": "^0.18.1",
     "apollo-local-query": "^0.3.0",
     "apollo-test-utils": "^0.3.2",
+    "auth0-js": "^9.4.2",
     "autoprefixer": "^7.1.2",
     "awesome-typescript-loader": "^3.2.2",
     "axios": "^0.17.1",
+    "bcrypt": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
     "casual": "^1.5.19",
     "compression": "^1.7.0",
@@ -182,6 +175,7 @@
     "graphql-server-express": "^1.0.5",
     "graphql-subscriptions": "^0.5.4",
     "graphql-tools": "^1.1.0",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
@@ -247,7 +241,10 @@
     "webpack-split-by-path": "^2.0.0",
     "xlsx": "^0.11.16"
   },
-  "pre-commit": ["fmt:prettier", "lint:fix"],
+  "pre-commit": [
+    "fmt:prettier",
+    "lint:fix"
+  ],
   "devDependencies": {
     "@playlyfe/gql": "^2.3.2"
   }
